<resources>
    <string name="app_name">UNIFIED APP</string>
    <item name="srn_root_layout" type="id" />
    <string name="srn_drawer_open">Open</string>
    <string name="srn_drawer_close">Close</string>
    <string name="Smart_watch">Smart Watch</string>
    <string name="weightScale">Smart Weight Scale</string>
    <string name="cctv_controller">CCTV Controller</string>
    <string name="coming_soon">More coming soon</string>
    <string name="smart_lock">Smart Lock</string>
    <string name="profile_name">Profile Name</string>
</resources>